fixed contact overflow

--- a/assets/style/contact.scss
+++ b/assets/style/contact.scss
@@ -1,21 +1,25 @@
-#contact {
-	//background-color: #20202055;
-	#particles-js {
-		position: absolute;
-		width: 100vw;
-		height: 100vh;
-	}
-	.card {
-		background-color: #202020;
-		color: white;
-		form {
-			input:not([type="submit"]),
-			textarea {
-				background-color: #202020;
-				border: none;
-				border-radius: 0px;
-				border-bottom: 2px solid #fd7e14;
-				color: white;
+main {
+	overflow: hidden;
+	#contact {
+		//background-color: #20202055;
+		#particles-js {
+			position: absolute;
+			width: 100vw;
+			height: 100vh;
+		}
+		.card {
+			background-color: #202020;
+			color: white;
+
+			form {
+				input:not([type="submit"]),
+				textarea {
+					background-color: #202020;
+					border: none;
+					border-radius: 0px;
+					border-bottom: 2px solid #fd7e14;
+					color: white;
+				}
 			}
 		}
 	}
